--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="text/javascript" src="fizzbuzz.js"></script>
+    <script type="text/javascript" src="sumofdigits.js"></script>
 </body>
 </html>
